force-app/main/default/objects/Krow__Time_Off__c/Krow__Time_Off__c.object-meta.xml
<CustomObject>
    <label>My Time Off</label>
    <nameField>
        <displayFormat>TO-{0}</displayFormat>
        <label>Time Off Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>My Time Off</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>