force-app/main/default/objects/Krow__Time_Off__c/fields/Krow__End_Date__c.field-meta.xml
<CustomField>
    <fullName>Krow__End_Date__c</fullName>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>