force-app/main/default/objects/Krow__Time_Off__c/fields/Krow__Notes__c.field-meta.xml
<CustomField>
    <fullName>Krow__Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>