force-app/main/default/objects/Krow__Time_Off__c/fields/Krow__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Krow__Start_Date__c</fullName>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>