force-app/main/default/objects/Krow__Time_Off__c/fields/Krow__Total_Absence_Days__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Absence_Days__c</fullName>
    <label>Total Absence (Days)</label>
    <summaryForeignKey>Krow__Time_Off_Split__c.Krow__Time_Off__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>