force-app/main/default/objects/Krow__Time_Off__c/fields/Krow__Total_Absence_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Absence_Hours__c</fullName>
    <label>Total Absence (Hours)</label>
    <summarizedField>Krow__Time_Off_Split__c.Krow__Hours__c</summarizedField>
    <summaryForeignKey>Krow__Time_Off_Split__c.Krow__Time_Off__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>