force-app/main/default/objects/Krow__Time_Off__c/fields/Krow__Type__c.field-meta.xml
<CustomField>
    <fullName>Krow__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vacation</fullName>
            </value>
            <value>
                <fullName>Sick</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>