force-app/main/default/objects/Krow__Time_Off__c/validationRules/Krow__Resource_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Krow__Resource_Is_Required</fullName>
    <active>true</active>
    <description>A time-off can&apos;t be without a Resource.</description>
    <errorConditionFormula>ISBLANK(Krow__Project_Resource__c)</errorConditionFormula>
    <errorDisplayField>Krow__Project_Resource__c</errorDisplayField>
    <errorMessage>Specify Project Resource for whom time-off is entered.</errorMessage>
</ValidationRule>