force-app/main/default/objects/Krow__Time_Off__c/listViews/Krow__All.listView-meta.xml
<ListView>
    <fullName>Krow__All</fullName>
    <columns>NAME</columns>
    <columns>Krow__Project_Resource__c</columns>
    <columns>Krow__Type__c</columns>
    <columns>Krow__Start_Date__c</columns>
    <columns>Krow__End_Date__c</columns>
    <columns>Krow__Hours__c</columns>
    <columns>Krow__Total_Absence_Days__c</columns>
    <columns>Krow__Total_Absence_Hours__c</columns>
    <columns>Krow__Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>